<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settingBackground"
    tools:context="com.chgtaxihe.dailyvideo.UI.Fragment.SettingFragment">

    <RelativeLayout
        android:id="@+id/layout_delCache"
        style="@style/layout_rect"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginLeft="8dp"
            android:text="@string/del_cache"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="已用0M"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/author_word"
        style="@style/layout_rect"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/author_word"
            android:gravity="center_vertical"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:layout_margin="10dp"
        android:gravity="center"
        />
</LinearLayout>
